--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "commit": "git-cz",
     "test": "echo 'no test'"
   },
+  "types": "index.d.ts",
   "devDependencies": {
     "commitizen": "^2.9.6",
     "cz-conventional-changelog": "^2.0.0",
